Fixed overflow for flex grid

--- a/resources/assets/scss/modules/_tabledata.scss
+++ b/resources/assets/scss/modules/_tabledata.scss
@@ -2,6 +2,8 @@
   border: none;
   width: 100%;
   height: 100%;
+  overflow: auto;
+  display: flex;
 
   @include query(lg) {
     position: relative;
@@ -12,7 +14,7 @@
             overflow-x: scroll;
             overflow-y: hidden;
             white-space: nowrap;
-            min-width: 1000px;
+            min-width: 1250px;
         }
         width: 100%;
         display: table;
